[tool.poetry]
name = "krystalium-api"
version = "1.0.0"
description = "Backend for Krystalium projects"
authors = ["Arjen Hiemstra <ahiemstra@heimr.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
FastAPI-JSONAPI = "^2.6.0"
sqlalchemy = "^2.0.28"
pydantic = "^1.10.14"
aiosqlite = "^0.20.0"
authlib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
